--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,8 @@ h2 {
 h3 {
     color: #11999E;
     font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: normal;
 }
 
 hr {
@@ -40,6 +42,8 @@ hr {
 
 p {
     line-height: 2;
+    font-size: 1.25rem;
+    font-weight: normal;
 }
 
 a {
@@ -47,6 +51,8 @@ a {
     font-family: 'Montserrat', sans-serif;
     margin: 0.625rem 1.25rem;
     text-decoration: none;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 a:hover {
@@ -153,6 +159,7 @@ a:hover {
 
   .copyright {
     color: #EAF6F6;
-    font-size: 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
     padding: 1.25rem 0;
   }
