--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ h2 {
     color: #66BFBF;
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
-    font-weight: normal;
+    font-weight: 400;
     padding-bottom: 0.625rem;
 }
 
@@ -30,7 +30,7 @@ h3 {
     color: #11999E;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
-    font-weight: normal;
+    font-weight: 400;
 }
 
 hr {
