--- a/css/styles.css
+++ b/css/styles.css
@@ -92,14 +92,32 @@ a:hover {
 .flex-container {
     display: flex;
     background-color: DodgerBlue;
+    /* flex-direction: row; */
+    justify-content: space-between; /* Adjust alignment as needed */
+    align-items: baseline;
+    flex-wrap: wrap;
+    height: auto;
+    width: auto;
   }
   
 .flex-container > div {
+    position: relative;
     background-color: #f1f1f1;
+    flex: 1 0 auto; /* Let the image grow to fill available space */
+    object-fit: cover; /* Maintain aspect ratio and cover the container */
     margin: 10px;
     padding: 20px;
-    font-size: 30px;
+    height: auto;
+    /* max-height: 100%;
+    max-width: 100%; /* Ensure images don't exceed their natural width */
+    width: auto;
+    
   }
+
+.img-flex {
+    height: 100%;
+    width: 100%;
+}
 
 .bottom-container {
     background-color: #66BFBF;
