--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ a:hover {
 .flex-container {
     display: flex;
     background-color: DodgerBlue;
-    /* flex-direction: row; */
+    flex-direction: row;
     justify-content: space-between; /* Adjust alignment as needed */
     align-items: baseline;
     flex-wrap: wrap;
@@ -111,6 +111,10 @@ a:hover {
     padding: 20px;
     width: auto;
   }
+
+.flex-div {
+    height: 12.5rem;
+}
 
 .img-flex {
     height: 100%;
