--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,12 @@ a:hover {
     width: 60%;
 }
 
-.center-div {
+/* .center-div {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+  } */
   
 .top-container {
     background-color: #E4F9F5;
@@ -92,33 +92,28 @@ a:hover {
 .flex-container {
     display: flex;
     background-color: DodgerBlue;
-    flex-direction: row;
-    justify-content: space-between; /* Adjust alignment as needed */
-    align-items: baseline;
-    flex-wrap: wrap;
-    height: auto;
-    width: auto;
   }
   
 .flex-container > div {
     position: relative;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
     background-color: #f1f1f1;
     flex: 1; /* Let the image grow to fill available space */
     flex-basis: auto;
-    align-self: stretch;
+    /* align-self: stretch; */
     object-fit: contain; /* Maintain aspect ratio and cover the container */
-    margin: 10px;
+    margin: auto;
     padding: 20px;
-    width: auto;
+    height: 12.5rem;
   }
 
-.flex-div {
-    height: 12.5rem;
-}
-
 .img-flex {
-    height: 100%;
     width: 100%;
+    height: 100%;
 }
 
 .bottom-container {
