--- a/css/styles.css
+++ b/css/styles.css
@@ -91,19 +91,18 @@ a:hover {
 
 .flex-container {
     display: flex;
-    background-color: DodgerBlue;
-    flex-wrap: wrap;
+    /* background-color: DodgerBlue; */
+    flex-flow: row wrap;
   }
   
 .flex-container > div {
     position: relative;
-    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
     background-color: #f1f1f1;
-    flex: 1; /* Let the image grow to fill available space */
-    flex-basis: auto;
+    flex: 1 0 auto; /* Let the image grow to fill available space */
+    /* flex-basis: auto; */
     margin: auto;
     padding: 20px;
     width: 12.5rem;
