--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,9 @@ h3 {
 hr {
     border: dotted #EAF6F6 6px;
     border-bottom: none;
-    margin: 6.25rem auto;
+    margin: 5rem auto;
     width: 4%;
+    color: black;
 }
 
 p {
@@ -51,7 +52,7 @@ a {
     font-family: 'Montserrat', sans-serif;
     margin: 0.625rem 1.25rem;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
@@ -132,6 +133,21 @@ div.profile-flex {
     width: 100%;
     height: 100%;
     object-fit: contain; /* Maintain aspect ratio and cover the container */
+}
+
+.contact-flex {
+    display: flex;
+    flex-flow: column wrap;
+}
+
+div.contact-flex {
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    background-color: #f1f1f1;
+    flex: 1 0 auto; /* Let the image grow to fill available space */
+    margin: auto;
+    padding: 20px;
 }
 
 .bottom-container {
