--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,20 @@ a:hover {
     width: 80%;
 }
 
+.top-flex {
+    display: flex;
+    flex-flow: column wrap;
+}
+
+div.top-flex {
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    flex: 1 0 auto; /* Let the image grow to fill available space */
+    margin: auto;
+    padding: 20px;
+}
+
 .profile-flex {
     display: flex;
     flex-flow: column wrap;
@@ -116,7 +130,7 @@ div.profile-flex {
   }
   
 .flex-container > div {
-    position: relative;
+    /* position: relative; */
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
@@ -182,13 +196,15 @@ div.contact-flex {
     right: 300px;
     top: 50px;
     width: 20%;
+    margin-bottom: 2rem;
 }
 
 .bottom-cloud {
-    bottom: 300px;
-    left: 300px;
+    left: 5rem;
     position: absolute;
     width: 20%;
+    margin-right: 3rem;
+    margin-bottom: 2rem;
 }
 
 .btn {
