--- a/css/styles.css
+++ b/css/styles.css
@@ -1,73 +1,80 @@
 html {
-    font-size: 16px; /* Set a base font size for the document */
+  font-size: 16px; /* Set a base font size for the document */
 }
 
-body {    
-    color: #40514E;
-    font-family: 'Merriweather Sans', serif;
-    font-size: 1rem; /* 1rem equals 16px, the base font size */
-    margin: 0;
-    text-align: center;
+body {
+  color: #40514e;
+  font-family: "Merriweather Sans", serif;
+  font-size: 1rem; /* 1rem equals 16px, the base font size */
+  margin: 0;
+  text-align: center;
+}
+
+@media screen and (max-width: 390px) {
+  .top-cloud {
+    /* right: calc((100% - 390px) / (1366 - 390) * (300 - 390) + 390px); */
+    right: calc(390px * (18.75rem / 1366px));
+  }
 }
 
 h1 {
-    color: #66BFBF;
-    font-family: 'Sacramento', cursive;
-    font-size: 5.625rem;
-    /* line-height: 2; */
-    margin: 3.125rem auto 0rem auto;
+  color: #66bfbf;
+  font-family: "Sacramento", cursive;
+  font-size: 5.625rem;
+  /* line-height: 2; */
+  margin: 3.125rem auto 0rem auto;
 }
 
 h2 {
-    color: #66BFBF;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 400;
-    padding-bottom: 0.625rem;
+  color: #66bfbf;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+  padding-bottom: 0.625rem;
 }
 
 h3 {
-    color: #11999E;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 400;
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 hr {
-    border: dotted #EAF6F6 6px;
-    border-bottom: none;
-    margin: 5rem auto;
-    width: 4%;
-    color: black;
+  border: dotted #eaf6f6 6px;
+  border-bottom: none;
+  margin: 5rem auto;
+  width: 4%;
+  color: black;
 }
 
 p {
-    line-height: 2;
-    font-size: 1.25rem;
-    font-weight: normal;
+  line-height: 2;
+  font-size: 1.25rem;
+  font-weight: normal;
 }
 
 a {
-    color: #11999E;
-    font-family: 'Montserrat', sans-serif;
-    margin: 0.625rem 1.25rem;
-    text-decoration: none;
-    font-size: 1.5rem;
-    font-weight: 400;
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  margin: 0.625rem 1.25rem;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 a:hover {
-    color: #EAF6F6;
+  color: #eaf6f6;
 }
 
 .contact-message {
-    margin: 2.5rem auto 3.75rem;
-    width: 40%;
+  margin: 2.5rem auto 3.75rem;
+  width: 40%;
 }
 
 .intro {
-    margin: auto;
-    width: 60%;
+  margin: auto;
+  width: 60%;
 }
 
 /* .center-div {
@@ -76,167 +83,170 @@ a:hover {
     left: 50%;
     transform: translate(-50%, -50%);
   } */
-  
+
 .top-container {
-    background-color: #E4F9F5;
-    padding-top: 100px;
+  position: relative;
+  background-color: #e4f9f5;
+  padding-top: 100px;
 }
 
 .middle-container {
-    position: relative;
-    line-height: 2;
-    margin: 6.25rem auto;
-    /* text-align: left; */
-    width: 80%;
+  position: relative;
+  line-height: 2;
+  margin: 6.25rem auto;
+  /* text-align: left; */
+  width: 80%;
 }
 
-.top-flex {
-    display: flex;
-    flex-flow: column wrap;
+.top-flex,
+.profile-flex,
+.contact-flex {
+  display: flex;
+  flex-flow: column wrap;
 }
 
 div.top-flex {
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    flex: 1 0 auto; /* Let the image grow to fill available space */
-    margin: auto;
-    padding: 20px;
-}
-
-.profile-flex {
-    display: flex;
-    flex-flow: column wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  flex: 1 0 auto; /* Let the image grow to fill available space */
+  margin: auto;
+  padding: 1.25rem;
 }
 
 div.profile-flex {
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    background-color: #f1f1f1;
-    flex: 1 0 auto; /* Let the image grow to fill available space */
-    margin: auto;
-    padding: 20px;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  background-color: #f1f1f1;
+  flex: 1 0 auto; /* Let the image grow to fill available space */
+  margin: auto;
+  padding: 20px;
 }
 
 .profile {
-    width: 30%;
+  width: 30%;
 }
 
 .flex-container {
-    display: flex;
-    /* background-color: DodgerBlue; */
-    flex-flow: row wrap;
-  }
-  
+  display: flex;
+  /* background-color: DodgerBlue; */
+  flex-flow: row wrap;
+}
+
 .flex-container > div {
-    /* position: relative; */
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    background-color: #f1f1f1;
-    flex: 1 0 auto; /* Let the image grow to fill available space */
-    /* flex-basis: auto; */
-    margin: auto;
-    padding: 20px;
-    width: 12.5rem;
-    height: 12.5rem;
+  /* position: relative; */
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  background-color: #f1f1f1;
+  flex: 1 0 auto; /* Let the image grow to fill available space */
+  /* flex-basis: auto; */
+  margin: auto;
+  padding: 20px;
+  width: 12.5rem;
+  height: 12.5rem;
 }
 
 .img-flex {
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* Maintain aspect ratio and cover the container */
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* Maintain aspect ratio and cover the container */
 }
 
 .contact-flex {
-    display: flex;
-    flex-flow: column wrap;
+  display: flex;
+  flex-flow: column wrap;
 }
 
 div.contact-flex {
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    background-color: #f1f1f1;
-    flex: 1 0 auto; /* Let the image grow to fill available space */
-    margin: auto;
-    padding: 20px;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  background-color: #f1f1f1;
+  flex: 1 0 auto; /* Let the image grow to fill available space */
+  margin: auto;
+  padding: 20px;
 }
 
 .bottom-container {
-    background-color: #66BFBF;
-    padding: 3.125rem 0 1.25rem;
-}
-
-.skill-row {
-    margin: 6.25rem auto;
-    text-align: left;
-    width: 50%;
-}
-
-.code-img-left {
-    float: left;
-    height: 12.5rem;
-    margin-right: 1.875rem;
-}
-
-.code-img-right {
-    float: right;
-    height: 12.5rem;
-    margin-left: 1.875rem;
+  background-color: #66bfbf;
+  padding: 3.125rem 0 1.25rem;
 }
 
 .mountain {
-    width: 100%;
+  width: 100%;
 }
 
-.top-cloud {    
-    position: absolute;
-    right: 300px;
-    top: 50px;
-    width: 20%;
-    margin-bottom: 2rem;
+.top-cloud {
+  right: 10rem;
+  top: 3.125rem;
+  width: 20%;
 }
 
 .bottom-cloud {
-    left: 5rem;
-    position: absolute;
-    width: 20%;
-    margin-right: 3rem;
-    margin-bottom: 2rem;
+  position: absolute;
+  left: 5rem;
+  width: 20%;
+  margin-right: 3rem;
+  margin-bottom: 2rem;
 }
 
 .btn {
-    background: #11CDD4;
-    background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
-    background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
-    background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
-    background-image: -o-linear-gradient(top, #11CDD4, #11999E);
-    background-image: linear-gradient(to bottom, #11CDD4, #11999E);
-    -webkit-border-radius: 8;
-    -moz-border-radius: 8;
-    border-radius: 8px;
-    font-family: 'Montserrat', sans-serif;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-  }
-  
-  .btn:hover {
-    background: #30E3CB;
-    background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
-    background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
-    background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
-    background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
-    background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
-    text-decoration: none;
-  }
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
 
-  .copyright {
-    color: #EAF6F6;
-    font-size: 1rem;
-    font-weight: 400;
-    padding: 1.25rem 0;
-  }
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+.atype,
+.separator {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  margin: 0.625rem 1.25rem;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.atype:hover {
+  color: #eaf6f6;
+}
+
+.pi-bullet-icon {
+  /* position: absolute; Causes error while using Font Awesome*/
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 1rem;
+  /* color: #c6ccd0; */
+}
+/*top: 50%; Adjust the vertical position as needed */
+/*transform: translateY(-50%); Center the icon vertically */
+
+.copyright {
+  color: #eaf6f6;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 1.25rem 0;
+}
