--- a/css/styles.css
+++ b/css/styles.css
@@ -114,15 +114,17 @@ div.top-flex {
   padding: 1.25rem;
 }
 
-div.profile-flex {
+.profile-contact-flex {
   justify-content: space-evenly;
   align-items: center;
   align-content: center;
   background-color: #f1f1f1;
-  flex: 1 0 auto; /* Let the image grow to fill available space */
+  flex: 1 0 auto; /* Let the container grow to fill available space */
   margin: auto;
-  padding: 20px;
+  padding: 1.25rem;
 }
+/* <div class="profile-flex profile-contact-flex"></div>  */
+/* <div class="contact-flex profile-contact-flex"></div>  */
 
 .profile {
   width: 30%;
@@ -152,21 +154,6 @@ div.profile-flex {
   width: 100%;
   height: 100%;
   object-fit: contain; /* Maintain aspect ratio and cover the container */
-}
-
-.contact-flex {
-  display: flex;
-  flex-flow: column wrap;
-}
-
-div.contact-flex {
-  justify-content: space-evenly;
-  align-items: center;
-  align-content: center;
-  background-color: #f1f1f1;
-  flex: 1 0 auto; /* Let the image grow to fill available space */
-  margin: auto;
-  padding: 20px;
 }
 
 .bottom-container {
