--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   font-size: 1rem; /* 1rem equals 16px, the base font size */
   margin: 0;
   text-align: center;
+  width: 100%;
 }
 
 h1 {
@@ -15,6 +16,7 @@ h1 {
   font-family: "Sacramento", cursive;
   font-size: 5.625rem;
   /* line-height: 2; */
+  z-index: 1;
   margin: 3.125rem auto 0rem auto;
 }
 
@@ -177,18 +179,26 @@ div.contact-details-flex {
   width: 100%;
 }
 
+.cloud-box {
+  position: relative;
+}
+
 .top-cloud {
-  right: 10rem;
+  right: 3%;
   top: 3.125rem;
-  width: 20%;
+  /* width: 16rem; */
+  width: 50%;
+  position: absolute;
+  /* z-index: -1; */
+  opacity: 0.5; /* Set the desired transparency level (0 to 1) */
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 5rem;
-  width: 20%;
-  margin-right: 3rem;
-  margin-bottom: 2rem;
+  left: -10%;
+  width: 70%;
+  bottom: 1%;
+  opacity: 0.5; /* Set the desired transparency level (0 to 1) */
 }
 
 .btn {
@@ -261,9 +271,37 @@ div.contact-details-flex {
 }
 
 @media screen and (max-width: 390px) {
-  .top-cloud {
-    /* right: calc((100% - 390px) / (1366 - 390) * (300 - 390) + 390px); */
+  /* .top-cloud {
+    right: calc((100% - 390px) / (1366 - 390) * (300 - 390) + 390px);
     right: calc(390px * (18.75rem / 1366px));
+  } */
+
+  .top-cloud {
+    left: 50%;
+    top: 3.125rem;
+    /* width: 16rem; */
+    height: 50%;
+    width: auto;
+    position: absolute;
+    /* z-index: -1; */
+    opacity: 0.5; /* Set the desired transparency level (0 to 1) */
+  }
+
+  .bottom-cloud {
+    position: absolute;
+    height: 50%;
+    width: auto;
+    left: -50%;
+    bottom: 3%;
+    opacity: 0.3; /* Set the desired transparency level (0 to 1) */
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 2rem;
   }
 
   a {
