--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ div.contact-details-flex {
 
 .bottom-cloud {
   position: absolute;
-  left: -10%;
+  left: 1%;
   width: 70%;
   bottom: 1%;
   opacity: 0.5; /* Set the desired transparency level (0 to 1) */
@@ -270,21 +270,36 @@ div.contact-details-flex {
   padding: 1.25rem 0;
 }
 
-@media screen and (max-width: 390px) {
+/* Media query for screens with a maximum width of 900 pixels. The media query now checks if the screen width is less than or equal to 900 pixels. */
+@media only screen and (max-width: 900px) {
+  .top-cloud {
+    right: 0;
+  }
+
+  .bottom-cloud {
+    left: 0;
+  }
+
   /* .top-cloud {
     right: calc((100% - 390px) / (1366 - 390) * (300 - 390) + 390px);
     right: calc(390px * (18.75rem / 1366px));
   } */
 
-  .top-cloud {
+  /* .top-cloud,
+  .bottom-cloud {
+    display: none; Hide the default images for small screens
+  }
+ */
+  /* .top-cloud {
     left: 50%;
     top: 3.125rem;
-    /* width: 16rem; */
-    height: 50%;
-    width: auto;
+    width: 16rem;
+    height: auto;
+    width: 100%;
     position: absolute;
-    /* z-index: -1; */
-    opacity: 0.5; /* Set the desired transparency level (0 to 1) */
+    width: 100%; Use relative units for responsiveness
+    clip-path: polygon(0 0, 50% 0, 50% 100%, 0% 100%);
+    opacity: 0.5; Set the desired transparency level (0 to 1)
   }
 
   .bottom-cloud {
@@ -293,8 +308,9 @@ div.contact-details-flex {
     width: auto;
     left: -50%;
     bottom: 3%;
-    opacity: 0.3; /* Set the desired transparency level (0 to 1) */
-  }
+    overflow: hidden;
+    opacity: 0.3; Set the desired transparency level (0 to 1)
+  } */
 
   h1 {
     font-size: 4rem;
